--- a/php-simple/composer.json
+++ b/php-simple/composer.json
@@ -6,11 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "laravel/lumen-framework": "5.8.*"
+        "laravel/lumen-framework": "9.*"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "9.*",
         "mockery/mockery": "^1.0"
     },
     "autoload": {
@@ -30,7 +30,9 @@
     "scripts": {
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ]
+        ],
+        "test": "vendor/phpunit/phpunit/phpunit",
+        "start": "php -S localhost:8000 -t bootstrap"
     },
     "config": {
         "preferred-install": "dist",
